operators/grafana-dev/grafana-dev-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: multicluster-observability-grafana-dev
    observability.open-cluster-management.io/name: observability
  name: grafana-dev
  namespace: open-cluster-management-observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multicluster-observability-grafana-dev
      observability.open-cluster-management.io/name: observability
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: multicluster-observability-grafana-dev
        observability.open-cluster-management.io/name: observability
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - multicluster-observability-grafana-dev
              topologyKey: topology.kubernetes.io/zone
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - multicluster-observability-grafana-dev
              topologyKey: kubernetes.io/hostname
            weight: 30
      containers:
      - args:
        - -config=/etc/grafana/grafana.ini
        image: quay.io/stolostron/grafana:2.4.2-SNAPSHOT-2022-01-10-20-20-33
        imagePullPolicy: Always
        name: grafana-dev
        ports:
        - containerPort: 3001
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 4m
            memory: 100Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
        - mountPath: /etc/grafana
          name: grafana-dev-config
      - env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: quay.io/stolostron/grafana-dashboard-loader:2.4.2-SNAPSHOT-2022-01-10-20-20-33
        imagePullPolicy: Always
        name: grafana-dashboard-loader
        resources:
          requests:
            cpu: 4m
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: multiclusterhub-operator-pull-secret
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      serviceAccount: grafana
      volumes:
      - persistentVolumeClaim:
          claimName: grafana-dev
        name: grafana-storage
      - name: grafana-datasources
        secret:
          defaultMode: 420
          secretName: grafana-datasources
      - name: grafana-dev-config
        secret:
          defaultMode: 420
          secretName: grafana-dev-config
