operators/grafana-dev/grafana-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.open-cluster-management.io/rewrite-target: /
    kubernetes.io/ingress.class: ingress-open-cluster-management
  name: grafana-dev
  namespace: open-cluster-management-observability
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: grafana-dev
            port:
              number: 3001
        path: /grafana-dev
        pathType: ImplementationSpecific
